--- a/server/scripts/email-template.html
+++ b/server/scripts/email-template.html
@@ -47,7 +47,7 @@
         <!-- Футер -->
         <div style="text-align: center; margin-top: 40px; padding-top: 20px; border-top: 1px solid #2a2a3e;">
             <p style="color: #666; font-size: 12px; margin: 0;">
-                © 2024 INSIDE. Все права защищены.
+                © 2025 SHAKEDOWN. Все права защищены.
             </p>
         </div>
     </div>
