--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shakedown Client 1.21.4 - Лучший клиент для Minecraft</title>
+    <title>Shakedown Client 1.21.4</title>
     <link rel="icon" type="image/x-icon" href="/icon.ico">
 </head>
 <body>
